# rust-hello-azure-sphere

./: .gitignore  Cargo.toml  README.md  Xargo.toml  app_manifest.json  arm-v7-none-eabi.json  armv7-linux-eabi.json  build._rs  cm.bat  debug.bat  deploy.bat  do.bat  do2.bat  gcc_wrapper.d  package.bat  rust-sphere-hello.sln  sc.cmd  sc2.bat  setenv.bat
benches/gg_2018/: keygen.rs
hello/: app_manifest.json  main.c  main.h  rust-sphere-hello.vcxproj  rust-sphere-hello.vcxproj.filters  rust_hello.h
lib-minstd/: Cargo.toml
other-rust-lib/tests/: Cargo.toml  lib.rs
other-rust-lib/tests/common/: mod.rs
rust/: Cargo.toml  do.bat  do2.bat  setenv.bat
rust/src/: drun.rs  lib.rs  woo.rs
src/: allocator.rs  drun.rs  lib.rs  log.rs  main.rs_  woo.rs
src/curv/cryptographic_primitives/commitments/: hash_commitment.rs
src/curv/cryptographic_primitives/hashing/: hash_sha256.rs
src/curv/cryptographic_primitives/proofs/: sigma_correct_homomorphic_elgamal_enc.rs  sigma_dlog.rs
src/curv/cryptographic_primitives/secret_sharing/: feldman_vss.rs
src/curv/elliptic/curves/: secp256_k1.rs
src/gg_2018/: mod.rs  test.rs
src/paillier/: core.rs
src/paillier/encoding/: integral.rs  mod.rs
src/paillier/zkproofs/: correct_key_ni.rs
tests/: keygen.rs  mta.rs  sign.rs
tests/common/: mod.rs
trallocator/: Cargo.toml
trallocator/src/: lib.rs
