[package]
name = "emerald-city"
version = "0.2.0"

authors = [
    "Omer <omer@kzencorp.com>"
]
description = "WASM/HW-friendly lightweight client application for threshold ECDSA"
homepage = "https://github.com/KZen-networks"
repository = "https://github.com/KZen-networks/emerald-city"
license = "GPL-3.0-or-later"


[lib]
# crate-type = ["bin", "staticlib", "lib", "cdylib"]
# crate-type = ["staticlib"]
# crate-type = ["staticlib", "lib", "cdylib"]
crate-type = ["lib"]
# crate-type = ["bin"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version="0.6", features = ["wasm-bindgen"] }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

num-bigint = {version = "0.2" , features = ["serde","rand"]}
num-integer = "0.1"
num-traits = "0.2"

bit-vec = "0.6"
cryptoxide = "0.1.1"
zeroize = "0.9"

libsecp256k1 = { version ="0.2.2" , git="https://github.com/vhnatyk/libsecp256k1-rs", branch="dev/vhnat/draft_shrinking_ecmult_acceleration_table" }

trallocator = { path = "./trallocator" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.2"

[[bench]]
name = "keygen"
path = "tests/keygen-tn.rs"
harness = false

[[bench]]
name = "sign"
path = "tests/sign-tn.rs"
harness = false

[[bin]]
name="bn1"
path="tests/common/mod.rs"

[profile.release]
panic = 'abort'
lto = true
# codegen-units = 1