[package]
name = "rust_hello"
version = "0.1.0"
authors = ["vhnat@eruptiq <vhnatyk@gmail.com>"]
edition = "2018"

[features]
std = []
default = ["std"]

[lib]
# name = "rust_hello"
# crate-type = ["cdylib"]
crate-type = ["cdylib", "staticlib"]
# # crate-type = ["bin", "staticlib", "lib", "cdylib"]
# crate-type = ["staticlib"]
# # crate-type = ["staticlib", "lib", "cdylib"]
# crate-type = ["lib"]
# # crate-type = ["bin"]

# [target.'cfg(target_arch = "armv7")'.dependencies]

[dependencies]
emerald-city-common = { version = "0.2.1", path = "../../l/tests/"}

# trallocator = { path = "./trallocator" }

# [[bench]]
# name = "keygen"
# path = "tests/keygen-tn.rs"
# harness = false

# [[bench]]
# name = "sign"
# path = "tests/sign-tn.rs"
# harness = false

# [[bin]]
# name="bn1"
# path="tests/common/mod.rs"

[[bin]]
name="drun"
path="src/drun.rs"

[profile.dev]
panic = 'abort'
# lto = true
# # codegen-units = 1

[profile.release]
panic = 'abort'
# lto = true
# # codegen-units = 1