[package]
name = "trallocator"
version = "0.1.0"
authors = ["vhnat@eruptiq <vhnatyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trallocator"
path = "src/lib.rs"
test = false
bench = false

[dependencies]
